feat: Introduce word management with SRS, grouping, and dedicated learning screens.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   google_generative_ai: ^0.4.7
   flutter_tts: ^4.2.3
   flutter_dotenv: ^5.2.1
+  flip_card: ^0.7.0
 
 dev_dependencies:
   flutter_test:
