--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_tts: ^4.2.3
   flutter_dotenv: ^5.2.1
   flip_card: ^0.7.0
+  uuid: ^4.3.3
 
 dev_dependencies:
   flutter_test:
