--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   flutter_dotenv: ^5.2.1
   flip_card: ^0.7.0
   uuid: ^4.3.3
+  firebase_core: ^3.9.0
+  cloud_firestore: ^5.6.4
 
 dev_dependencies:
   flutter_test:
@@ -74,9 +76,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - .env
+  assets:
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
