--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   cloud_firestore: ^5.6.4
   flutter_local_notifications: ^18.0.1
   timezone: ^0.10.0
+  firebase_auth: ^5.4.1
+  google_sign_in: ^6.2.2
 
 dev_dependencies:
   flutter_test:
